sandbox/output
FizzBuzz.java:6: error: cannot find symbol
        Handler buzzHandler = new BuzzHandler(normalNumberHandler);
                                  ^
  symbol:   class BuzzHandler
  location: class FizzBuzz
FizzBuzz.java:6: error: cannot find symbol
        Handler buzzHandler = new BuzzHandler(normalNumberHandler);
                                              ^
  symbol:   variable normalNumberHandler
  location: class FizzBuzz
FizzBuzz.java:7: error: constructor FizzHandler in class FizzHandler cannot be applied to given types;
        Handler fizzHandler = new FizzHandler(buzzHandler);
                              ^
  required: no arguments
  found: Handler
  reason: actual and formal argument lists differ in length
FizzBuzz.java:8: error: constructor FizzBuzzHandler in class FizzBuzzHandler cannot be applied to given types;
        this.fizzBuzzHandler = new FizzBuzzHandler(fizzHandler);
                               ^
  required: no arguments
  found: Handler
  reason: actual and formal argument lists differ in length
FizzBuzz.java:14: error: cannot find symbol
        result = this.fizzBuzzHandler.handle(number);
                                     ^
  symbol:   method handle(int)
  location: variable fizzBuzzHandler of type Handler
5 errors
